--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.VIBRATE" />
-    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:name=".MainApplication"
@@ -15,11 +15,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Socket">
-        <service android:name=".ServerService" >
+        <service android:name=".ServerService">
             <intent-filter>
-                <action android:name="android.intent.action.closeAction" />
+                <action android:name="android.intent.action.STOP" />
             </intent-filter>
         </service>
+        <receiver
+            android:name=".ActionManager"
+            android:exported="true" />
+
         <activity
             android:name="com.alexparra.chatapp.MainActivity"
             android:launchMode="singleTask">
