--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     def nav_version = "2.3.5"
 
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
     implementation "com.squareup.moshi:moshi:1.12.0"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
