added intent filter for deeplink in manifest and his recpective changes in MainActivity, ClientConnectFragment and navgraph. added ProfileFragment new class and chat row image itens, profile fragment and profile fragment menu views. added new icon and two new strings for profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,32 @@
         <activity
             android:name="com.psandroidlabs.chatapp.MainActivity"
             android:launchMode="singleTask">
+
+            <nav-graph android:value="@navigation/nav_graph" />
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:host="www.chatapp.psandroidlabs.com"
+                    android:scheme="https"
+                    android:pathPrefix="/" />
+            </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:host="www.chatapp.psandroidlabs.com"
+                    android:scheme="http"
+                    android:pathPrefix="/" />
             </intent-filter>
         </activity>
 
