--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,11 @@ android {
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def nav_version = "2.3.5"
+    def room_version = "2.3.0"
 
     kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.12.0'
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
     implementation 'com.squareup.moshi:moshi-kotlin:1.12.0'
     implementation "com.squareup.moshi:moshi:1.12.0"
     implementation "androidx.coordinatorlayout:coordinatorlayout:1.1.0"
