--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,6 +47,20 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <data android:mimeType="*/*" />
             </intent-filter>
+
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:host="www.chatapp.psandroidlabs.com"
+                    android:scheme="http"
+                    android:pathPrefix="/"/>
+                <data
+                    android:host="www.chatapp.psandroidlabs.com"
+                    android:scheme="https"
+                    android:pathPrefix="/"/>
+            </intent-filter>
         </activity>
 
         <provider
