--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <application
         android:name="com.psandroidlabs.chatapp.MainApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/ic_goat_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_goat_launcher_round"
         android:hardwareAccelerated="false"
